- fixed figure names prefixing which conflicted with BiocStyle - added stub of E3.25 vs. E3.5 FGF4-KO cluster stability analysis - bumped version number to 0.99.0
git-svn-id: file:///home/git/bioc-data.hedgehog.fhcrc.org/trunk/experiment/pkgs/Hiiragi2013@2515 db2202da-8704-0410-b924-b125b3cd84ef

--- a/vignettes/Hiiragi2013.Rnw
+++ b/vignettes/Hiiragi2013.Rnw
@@ -32,7 +32,7 @@ BiocStyle::latex()
   showstringspaces=false
 }
 
-\newcommand{\prefix}{\jobname}
+\renewcommand{\prefix}{\jobname}
 \newcommand{\myincfig}[4]{%
   \begin{figure}[tbp]
   \begin{center}
@@ -59,10 +59,10 @@ BiocStyle::latex()
 \title{{\Large Executable Analysis Document Supporting:}\\
   \textbf{Cell-to-cell gene expression variability followed by reinforcement 
   progressively segregates lineages in the early mouse embryo}\\
-  {\Large Yusuke Ohnishi, Wolfgang Huber, Akiko Tsumura, Minjung Kang, Panagiotis Xenopoulos, Kazuki Kurimoto, Andrzej Ole\'s, 
+  {\Large Yusuke Ohnishi, Wolfgang Huber, Akiko Tsumura, Minjung Kang, Panagiotis Xenopoulos, Kazuki Kurimoto, Andrzej K.~Ole\'s, 
     Marcos J.~Ara\'uzo-Bravo, Mitinori Saitou, Anna-Katerina Hadjantonakis and Takashi Hiiragi}}
 
-\renewcommand{\thetitle}{Analysis report: Ohnishi et.~al., 2013} % short title used in headers
+\renewcommand{\thetitle}{Analysis report: Ohnishi et al., 2013} % short title used in headers
 \author{Authors of this document: Andrzej K.~Ole\'s, Wolfgang Huber}
 
 \maketitle
