- fixed broken vignette
git-svn-id: file:///home/git/bioc-data.hedgehog.fhcrc.org/trunk/experiment/pkgs/Hiiragi2013@2518 db2202da-8704-0410-b924-b125b3cd84ef

--- a/vignettes/Hiiragi2013.Rnw
+++ b/vignettes/Hiiragi2013.Rnw
@@ -59,10 +59,10 @@ BiocStyle::latex()
 \title{{\Large Executable Analysis Document Supporting:}\\
   \textbf{Cell-to-cell gene expression variability followed by reinforcement 
   progressively segregates lineages in the early mouse embryo}\\
-  {\Large Yusuke Ohnishi, Wolfgang Huber, Akiko Tsumura, Minjung Kang, Panagiotis Xenopoulos, Kazuki Kurimoto, Andrzej K.~Ole\'s, 
+  {\Large Yusuke Ohnishi, Wolfgang Huber, Akiko Tsumura, Minjung Kang, Panagiotis Xenopoulos, Kazuki Kurimoto, Andrzej Ole\'s, 
     Marcos J.~Ara\'uzo-Bravo, Mitinori Saitou, Anna-Katerina Hadjantonakis and Takashi Hiiragi}}
 
-\renewcommand{\thetitle}{Analysis report: Ohnishi et al., 2013} % short title used in headers
+\renewcommand{\thetitle}{Analysis report: Ohnishi et.~al., 2013} % short title used in headers
 \author{Authors of this document: Andrzej K.~Ole\'s, Wolfgang Huber}
 
 \maketitle
@@ -408,7 +408,6 @@ for(i in seq(along=csa))
 The results of the above code are shown in Figure~\ref{figClue2} and indicate that
 indeed FGF4-KO E4.5 cells are distinct from either of the WT groups.
 
-
 %-----------------------------------------------------------
 \subsection{E3.25 WT and E3.5 FGF4-KO samples}\label{sec:clueko}
 %-----------------------------------------------------------
@@ -418,19 +417,20 @@ KO  cells at E3.5 overlap with ones representig E3.25 WT. To examine whether the
 stability analysis analogous to that in the previous section.
 
 <<ce3,cache=TRUE>>=
-sampleSet = unlist(groups[c("E3.25", "E3.5 (FGF4-KO)")])
-r = clusterResampling(x[!FGF4probes, sampleSet], ngenes=20)
+sampleSets = unlist(groups[c("E3.25", "E3.5 (FGF4-KO)")])
+resampledSampleSet = clusterResampling(x[!FGF4probes, sampleSets], ngenes=20)
+set.seed(2012)
 @
+
 <<figClue3,fig=TRUE,width=8,height=6>>=
 par(mfrow=c(1,2))
   for(j in seq_len(2))
-    plot(cl_membership(r$consensus)[,j], 
-     ylab=paste0("P(cluster ", j, ")"), xlab="Samples", col=x$sampleColour[sampleSet], pch=16, cex=1.5)
+    plot(cl_membership(resampledSampleSet$consensus)[,j], 
+     ylab=paste0("P(cluster ", j, ")"), xlab="Samples", col=x$sampleColour[sampleSets], pch=16, cex=1.5)
+
 @ 
 %
 \myincfig{figClue3}{\textwidth}{Cluster stability analysis with WT and FGF4-KO samples.}{}
-%
-
 
 
 %----------------------------------------------------------
